# libdescriptor

./: .gitignore  CMakeLists.txt  Descriptors.cpp  Descriptors.hpp  Dockerfile  Licence.md  Makefile  README.md  compile.sh  descriptors.cpp  descriptors.hpp  file_io_utils.hpp  finite_difference.hpp  helper.cpp  helper.hpp  libdescriptor.uml  python_bindings.cpp  setup.py
Bispectrum/: Bispectrum.cpp  Bispectrum.hpp
SOAP/: SOAP.cpp  SOAP.hpp  soap.cpp  soap.hpp
SymFun/: SymFun.cpp  SymFun.hpp  SymFunData.cpp
SymmetryFunction/: SymmetryFunction.cpp  SymmetryFunction.hpp
SymmetryFunctions/: SymmetryFunctions.cpp  SymmetryFunctions.hpp
Xi/: Xi.cpp  Xi.hpp
docs/: Doxyfile.in  Enzyme.md
docs/doxygen-custom/: header.html
docs/html/: _bispectrum_8cpp.html  _bispectrum_8cpp__incl.map  _bispectrum_8cpp__incl.md5  _bispectrum_8hpp.html  _bispectrum_8hpp__dep__incl.map  _bispectrum_8hpp__dep__incl.md5  _bispectrum_8hpp__incl.map  _bispectrum_8hpp__incl.md5  _bispectrum_8hpp_source.html  _descriptors_8cpp.html  _descriptors_8cpp.js  _descriptors_8cpp__incl.map  _descriptors_8cpp__incl.md5  _descriptors_8hpp.html  _descriptors_8hpp.js  _descriptors_8hpp__dep__incl.map  _descriptors_8hpp__dep__incl.md5  _descriptors_8hpp__incl.map  _descriptors_8hpp__incl.md5  _descriptors_8hpp_source.html  _r_e_a_d_m_e_8md.html  _symmetry_functions_8cpp.html  _symmetry_functions_8cpp__incl.map  _symmetry_functions_8cpp__incl.md5  _symmetry_functions_8hpp.html  _symmetry_functions_8hpp__dep__incl.map  _symmetry_functions_8hpp__dep__incl.md5  _symmetry_functions_8hpp__incl.map  _symmetry_functions_8hpp__incl.md5  _symmetry_functions_8hpp_source.html  a_8cpp.html  a_8cpp.js  a_8cpp__incl.map  a_8cpp__incl.md5  annotated.html  annotated_dup.js  bispectrum_2tmp_8cpp.html  bispectrum_2tmp_8py.html  bispectrum_2tmp_8py.js  bispectrum__test_8cpp.html  (+336 more)
docs/html/html/: _bispectrum_8cpp.html  _bispectrum_8cpp.js  _bispectrum_8cpp__incl.map  _bispectrum_8cpp__incl.md5  _bispectrum_8hpp.html  _bispectrum_8hpp.js  _bispectrum_8hpp__dep__incl.map  _bispectrum_8hpp__dep__incl.md5  _bispectrum_8hpp__incl.map  _bispectrum_8hpp__incl.md5  _bispectrum_8hpp_source.html  _descriptors_8cpp.html  _descriptors_8cpp__incl.map  _descriptors_8cpp__incl.md5  _descriptors_8hpp.html  _descriptors_8hpp.js  _descriptors_8hpp__dep__incl.map  _descriptors_8hpp__dep__incl.md5  _descriptors_8hpp__incl.map  _descriptors_8hpp__incl.md5  _descriptors_8hpp_source.html  _enzyme_8md.html  _r_e_a_d_m_e_8md.html  _symmetry_functions_8cpp.html  _symmetry_functions_8cpp.js  _symmetry_functions_8cpp__incl.map  _symmetry_functions_8cpp__incl.md5  _symmetry_functions_8hpp.html  _symmetry_functions_8hpp.js  _symmetry_functions_8hpp__dep__incl.map  _symmetry_functions_8hpp__dep__incl.md5  _symmetry_functions_8hpp__incl.map  _symmetry_functions_8hpp__incl.md5  _symmetry_functions_8hpp_source.html  a_8cpp.html  a_8cpp__incl.map  a_8cpp__incl.md5  annotated.html  annotated_dup.js  bispectrum_2tmp_8cpp.js  (+309 more)
docs/html/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_19.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  (+47 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+62 more)
include/: Descriptors.hpp  Xi.hpp  file_io_utils.hpp  finite_difference.hpp  get_xi_parameters.hpp
include/maths/: bessel_functions.hpp  clebsh_gordon.hpp  gamma.hpp  gl_quad.hpp  precomputed_values.hpp  radial_basis_functions.hpp  spherical_harmonics.hpp
maths/: bessel_functions.hpp  clebsh_gordon.hpp  gamma.hpp  gl_quad.hpp  maths.hpp  modified_bessel_i.hpp  radial_basis_functions.hpp  spherical_harmonics.hpp
python_bindings/: python_bindings.cpp
python_package/: README.md  pyproject.toml  setup.py
python_package/docs/: conf.py  design.rst  enzyme.rst  index.rst  installation.rst  libdescriptor.rst  neighbor.rst  tutorial.rst
python_package/libdescriptor/: __init__.py  libdescriptor.pyi  libgcc_s.so.1  neighbor.py
python_package/libdescriptor/neighbor/: __init__.py  neighbor.py
single_file/: Descriptors.cpp  Descriptors.hpp  compile.sh
src/: Descriptors.cpp  SOAP.cpp  SymmetryFunctions.cpp  Xi.cpp
src/maths/: bessel_functions.cpp  clebsh_gordon.cpp  gamma.cpp  gl_quad.cpp  precomputed_bessel_zeros.cpp  radial_basis_functions.cpp  spherical_bessel_zeros.cpp  spherical_harmonics.cpp
stress_single_file/: Descriptors-dr.cpp  Descriptors-dr.hpp
tests/autodiff_tests/bispectrum_test/: bispectrum_calc_test.py  bispectrum_load_test.py
tests/autodiff_tests/bispectrum_test/data/: Si.xyz
tests/autodiff_tests/symmetry_function_test/: symmetry_function_calc_test.py  symmetry_function_load_test.py
tests/autodiff_tests/symmetry_function_test/data/: descriptor.params
tests/enzyme_tests/bispectrum/: bispectrum_test.cpp  coords.txt  dedzeta.txt  generate_bispectrum.py  grad.txt  image.txt  run_new_py.py
tests/enzyme_tests/symmetry_function/: dedzeta.txt  generate_symmetry_function.py  grad.txt  neighs.txt  run_new_py.py  symmetry_test.cpp  symmetry_test_tmp.cpp  test_00000.xyz
